# capstone

./: .gitignore  README.md  basic_test_messy.ipynb
.github/workflows/: backend-tests.yml
backend/: .flaskenv  README.md  __init__.py  app.py  main.py  model_trial.ipynb  model_trial.py  models.py  pyproject.toml  requirements.txt  sample_plan.json
backend/app/: __init__.py
backend/app/api/: __init__.py  routes.py
backend/core/: __init__.py  accumulation.py  ping.py  projection.py
backend/domain/: accumulation.py
backend/schemas/: accumulation.py  ping.py
backend/tests/: conftest.py  test_accumulation.py  test_ping.py  test_projection_api.py  test_projection_regression.py  test_projection_zeroes.py  test_tax_treatment.py  test_zero_growth.py  test_zero_inflation.py  test_zero_spending.py
frontend/: .gitignore  README.md  eslint.config.js  index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: ChartPanel.tsx  DetailedPlanningPanel.tsx  ExportCard.tsx  InputWizard.tsx  RetirementSpendingModal.tsx  SavingsProgressionModal.tsx
frontend/src/lib/: api.ts  apiBase.ts  calc.ts  exportExcel.ts  ids.ts  number-format.ts  schedules.ts  schemas.ts
frontend/src/pages/: CalculatorPage.tsx  HomePage.tsx
other_trials/capstone2 copy/backend/: main.py  model_trial.py
other_trials/capstone2 copy/frontend/: vite.config.ts
other_trials/capstone2/backend/: .flaskenv  app.db  database.py  main.py  model_trial.py
other_trials/capstone2/frontend/: package-lock.json  vite.config.ts
(+26 files in other folders)
